crates/plotnik-lib/tests/04-emit/anchors/array_strict_first_child_impossible.txt
Q = (array .! (identifier))
==== diagnostics ====
error: pattern can never match
 --> query.ptk:1:6
  |
1 | Q = (array .! (identifier))
  |      ^^^^^
